--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,7 @@
 @import "~bootstrap/scss/functions";
 
 $primary: #f46524;
+$font-family-sans-serif: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/mixins";
