--- a/src/styles/_bootstrap.scss
+++ b/src/styles/_bootstrap.scss
@@ -31,7 +31,7 @@
 @import "~bootstrap/scss/jumbotron";
 //@import "~bootstrap/scss/alert";
 //@import "~bootstrap/scss/progress";
-//@import "~bootstrap/scss/media";
+@import "~bootstrap/scss/media";
 @import "~bootstrap/scss/list-group";
 //@import "~bootstrap/scss/close";
 //@import "~bootstrap/scss/modal";
