Drop carousel styles

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,7 @@
 @import "./variables";
 @import "./bootstrap";
 
+/*
 @import "~slick-carousel/slick/slick.css";
 
 $carousel-control-color: transparent;
@@ -62,3 +63,4 @@ $carousel-control-hover-opacity: 0.5;
 .slick-arrow.slick-next {
   background-image: $carousel-control-next-icon-bg;
 }
+ */
